Add mix thput bench for Neo4j